# 2020

./: Makefile  README.md  bash exercice.TXT  bash.sh  class3  youness benmansour.py
2020/: Correction
AdrianDominguezMolina/Class1/: Bash exercise
AdrianDominguezMolina/Class2/: services_topics.txt
CharlesPaganel/Class1/: HelloWorld.cpp
Class1/: Correction
Class1 indiv Charles Paganel/: CharlesPaganel.txt  Class1Exercice1.sh  Makefile
Class2/: bash_turtle.txt
Class2 indiv Charles Paganel/: TurtleTP2
Class3 indiv Charles Paganel/: Class3Exercice3.launch
Class6/: CharlesPaganel  Connect 2 PC with ROS.txt  connecter camera respberry a turtlebot.txt  hour_server.cpp  launch_hour.xml
Cledelin/Class2/: exercice.sh  square.sh
DINATAIB_TP/CLASSE1/: bash exercice.TXT
DinaTaib/DINATAIB_EXO1/: Correction  bash exercice.TXT
ErosOrtega/Class1/: ErosOrtega.txt  bash
ErosOrtega/Class2/: bash.txt  topics.txt
FREMONTSimon/: class2.sh
FREMONTSimon/Class1/: makefile
FREMONTSimon/Class3/: class3.launch
Group2/: map.yaml  setGoalPosition.sh
Group3/class5/: readme  (+1 more)
IndividualTp/sadek_maghzili/Class_6/Class_6/: CMakeLists.txt  package.xml
IndividualTp/sadek_maghzili/Class_6/Class_6/launch/: hour.launch
IndividualTp/sadek_maghzili/Class_6/Class_6/src/: hour_client.py  hour_server.cpp
IndividualTp/sadek_maghzili/Class_6/Class_6/srv/: hour.srv
YounesBen/: youness benmansour.py
class6/: Connect 2 PC with ROS.txt  hour_client.py
class6 exercices/: Hour_client.py
class_2/: changingpencolor.sh
santiago/: exercise1
slides/: class-1-excercises.key
(+423 files in other folders)
